# pywordcounts

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pywordcounts/: __init__.py
tests/: test_pywordcounts.py
