[tool.poetry]
name = "pywordcounts"
version = "0.1.0"
description = "Package to calculate words in a text file"
authors = ['Ken Mwangi <kenmwangi071@gmail.com>']
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
